@@ -1,8 +1,0 @@
-﻿using ExternalDependencies;
-
-namespace AutoRegistration
-{
-    public interface ILocalRepository : IRepository
-    {
-    }
-}
