@@ -1,6 +1,0 @@
-﻿namespace AutoRegistration
-{
-    internal sealed class LocalRepository : ILocalRepository
-    {
-    }
-}
