@@ -1,6 +1,0 @@
-﻿namespace ExternalDependencies
-{
-    internal sealed class ExternalInternalRepository : IExternalInternalRepository
-    {
-    }
-}
