@@ -1,6 +1,0 @@
-﻿namespace ExternalDependencies
-{
-    public abstract class ExternalPublicRepositoryBase : IExternalPublicRepository
-    {
-    }
-}
