@@ -3,7 +3,7 @@
 namespace ExternalDependencies
 {
     // Used to identify the assembly containing the types to auto-register
-    public sealed class ExternalDependenciesRegistrar : ServiceRegistrarBase
+    public sealed class ExternalRegistrar : ServiceRegistrarBase
     {
     }
 }
