@@ -1,6 +1,0 @@
-﻿namespace ExternalDependencies
-{
-    public interface IExternalPublicRepository : IRepository
-    {
-    }
-}
