@@ -1,0 +1,16 @@
+﻿using System;
+
+namespace ExternalDependencies
+{
+    internal sealed class NameRepository : IRepository
+    {
+        private static readonly string[] Names = new[] {"Peter", "Billy", "Mary", "Lisa", "Joseph", "Bernadette"};
+        private readonly Random _rnd = new();
+
+        public string GetRandomName()
+        {
+            var index = _rnd.Next(6);
+            return Names[index];
+        }
+    }
+}
